Fri Nov 28 17:21:28 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ORB_Core.cpp:

	  Cosmetic fix.

Fri Nov 28 16:43:12 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Kokyu_dsrt_schedulers/Kokyu_DSRT_Schedulers.dsp: 
	  Added $TAO_ROOT/tao to include path.

Fri Nov 28 15:44:31 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Sequence_Latency/Deferred/client.bor:
          Added portableserver library

Fri Nov 28 15:30:42 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV.bor:
        * orbsvcs/orbsvcs/CosConcurrency.bor:
        * orbsvcs/orbsvcs/CosEvent.bor:
        * orbsvcs/orbsvcs/CosLifeCycle.bor:
        * orbsvcs/orbsvcs/CosNaming.bor:
        * orbsvcs/orbsvcs/CosProperty.bor:
        * orbsvcs/orbsvcs/CosTime.bor:
        * orbsvcs/orbsvcs/CosTrading.bor:
        * orbsvcs/orbsvcs/DsLogAdmin.bor:
        * orbsvcs/orbsvcs/ETCL.bor:
        * orbsvcs/orbsvcs/FaultTolerance.bor:
        * orbsvcs/orbsvcs/PortableGroup.bor:
        * orbsvcs/orbsvcs/RT_Notification.bor:
        * orbsvcs/orbsvcs/SSLIOP.bor:
        * orbsvcs/orbsvcs/Svc_Utils.bor:
          Added missing Id tag

Fri Nov 28 14:33:09 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosNotification.mpc:
          Removed template files from sources

Fri Nov 28 13:34:03 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Sequence_Latency/Deferred/client.bor:
        * performance-tests/Sequence_Latency/DII/client.bor:
          Added missing libraries

Fri Nov 28 12:44:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV.mpc:
          Added missing md5c.c file

Fri Nov 28 11:22:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/Advanced_ch_12.mpc:
        * examples/Advanced/ch_18/Advanced_ch_18.mpc:
        * examples/Advanced/ch_21/Advanced_ch_21.mpc: