@@ -48,6 +48,14 @@ public:
 
   virtual int visit_eventtype_fwd (be_eventtype_fwd *node);
   
+  virtual int visit_field (be_field *node);
+  
+  virtual int visit_exception (be_exception *node);
+  
+  virtual int visit_struct (be_structure *node);
+  
+  virtual int visit_union (be_union *node);
+  
   virtual int visit_array (be_array *node);
 
   virtual int visit_typedef (be_typedef *node);
